# SlidingPuzzle

./: .gitignore  CMakeLists.txt  GameArea.qml  GameBoard.cpp  GameBoard.hpp  GameBoard.qml  GameController.qml  GameModel.cpp  GameModel.hpp  Main.qml  Tile.cpp  Tile.hpp  Tile.qml  main.cpp
src/: CMakeLists.txt  Main.qml  main.cpp
src/app/: CMakeLists.txt  GameModel.cpp  GameModel.hpp  GameTile.cpp  GameTile.hpp  pch.hpp
src/app/qmlfiles/: GameArea.qml  GameBoard.qml  GameTileDelegate.qml
